[build-system]
requires = ["setuptools>=62.3", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aioflows"
authors = [
    {name = "Anton Patrushev", email = "apatrushev@gmail.com"},
]

description = "Python data flows library to build structured applications"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}

requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "janus",
    "pydantic<2",
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "spherical-dev[dev]>=0.3.0,<0.4",
]
examples = [
    "aioconsole",
    "aiohttp",
    "aiomqtt",
    "requests",
    "zeroconf",
]
release = [
    "spherical-dev[release]>=0.3.4,<0.4",
]

[project.urls]
"Source" = "https://github.com/apatrushev/aioflows"
"Tracker" = "https://github.com/apatrushev/aioflows/issues"

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = true
